# kitchenbench

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CLAUDE.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/: index.md  layouts.md
plans/: 0001-kitchenbench-design.md  0002-task-instances-distributions.md  0003-sim-support.md
rigs/: yam-bimanual.json
src/kitchenbench/: CLAUDE.md  __init__.py  distributions.py  embodiment.py  instances.py  layout.py  policies.py  scoring.py  specs.py  tasks.py
src/kitchenbench/schemas/: rig.schema.json  scene-layout.schema.json
src/kitchenbench/sim/: __init__.py  blueprint.py  success.py
tests/: test_api_snapshot.py  test_conformance.py  test_distributions.py  test_docs_table.py  test_eval_instances.py  test_instances.py  test_layout.py  test_readme_table.py  test_realize_all.py  test_sim_annotations.py  test_sim_blueprint.py  test_sim_success.py  test_specs.py  test_tasks.py  test_world.py
