[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "kitchenbench"
version = "0.1.0"
description = "A bimanual kitchen-manipulation benchmark for VLA models, built on RoboLens."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "RoboCurve" }]
keywords = ["robotics", "benchmark", "vla", "bimanual", "kitchen", "manipulation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = ["robolens>=0.1", "numpy>=1.24"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.5",
]

[project.urls]
Homepage = "https://github.com/robocurve/kitchenbench"
Collection = "https://github.com/robocurve/worldevals"
Framework = "https://github.com/robocurve/robolens"

# RoboLens isn't on PyPI yet — resolve it from the tagged GitHub release. This is
# uv-only metadata (stripped from the published package), so CI uses uv. For local
# development against a sibling checkout, override with an editable install:
#   uv pip install -e ../robolens
[tool.uv.sources]
robolens = { git = "https://github.com/robocurve/robolens", tag = "v0.1.0" }

# RoboLens discovers these by entry point — no import needed for `robolens list`.
[project.entry-points."robolens.tasks"]
"kitchenbench/place_cutlery" = "kitchenbench.tasks:place_cutlery"
"kitchenbench/stack" = "kitchenbench.tasks:stack"
"kitchenbench/place_in_rack" = "kitchenbench.tasks:place_in_rack"
"kitchenbench/pour_pasta" = "kitchenbench.tasks:pour_pasta"
"kitchenbench/open_container" = "kitchenbench.tasks:open_container"
"kitchenbench/fold_cloth" = "kitchenbench.tasks:fold_cloth"
"kitchenbench/seal_container" = "kitchenbench.tasks:seal_container"
"kitchenbench/handoff" = "kitchenbench.tasks:handoff"
"kitchenbench/sort_cutlery" = "kitchenbench.tasks:sort_cutlery"
"kitchenbench/scoop_pasta" = "kitchenbench.tasks:scoop_pasta"

[project.entry-points."robolens.embodiments"]
kitchen = "kitchenbench.embodiment:KitchenEmbodiment"

[project.entry-points."robolens.policies"]
kitchen_scripted = "kitchenbench.policies:ScriptedKitchenPolicy"
kitchen_random = "kitchenbench.policies:RandomKitchenPolicy"
kitchen_noop = "kitchenbench.policies:NoopKitchenPolicy"

[tool.hatch.build.targets.wheel]
packages = ["src/kitchenbench"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["kitchenbench"]

[tool.mypy]
# numpy >= 2.5 ships stubs that use PEP 695 `type` statements, which mypy only
# accepts when targeting >= 3.12 — so type-check against 3.12 while runtime
# support stays >= 3.10 (ruff's target-version enforces the 3.10 syntax floor).
python_version = "3.12"
strict = true
files = ["src/kitchenbench"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.coverage.run]
branch = true
source = ["kitchenbench"]

[tool.coverage.report]
fail_under = 100
show_missing = true
exclude_also = [
    "if TYPE_CHECKING:",
    "@(abc\\.)?abstractmethod",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "^\\s*\\.\\.\\.$",
    ": \\.\\.\\.$",
    "pragma: no cover",
]
