[build-system]
requires = ["hatchling>=1.18", "hatch-vcs>=0.3", "hatch-fancy-pypi-readme>=24.1"]
build-backend = "hatchling.build"

[project]
name = "kitchenbench"
dynamic = ["version", "readme"]
description = "A bimanual kitchen-manipulation benchmark for VLA models, built on Inspect Robots."
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "RoboCurve" }]
keywords = ["robotics", "benchmark", "vla", "bimanual", "kitchen", "manipulation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = ["inspect-robots>=0.6", "numpy>=1.24"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.5",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
]

[project.urls]
Homepage = "https://github.com/robocurve/kitchenbench"
Documentation = "https://robocurve.github.io/kitchenbench/"
Collection = "https://github.com/robocurve/worldevals"
Framework = "https://github.com/robocurve/inspect-robots"

# Inspect Robots resolves from PyPI. For local development against a sibling
# checkout, use an editable install:
#   uv pip install -e ../inspect-robots
# Inspect Robots discovers these by entry point — no import needed for `inspect-robots list`.
[project.entry-points."inspect_robots.tasks"]
"kitchenbench/place_cutlery" = "kitchenbench.tasks:place_cutlery"
"kitchenbench/stack" = "kitchenbench.tasks:stack"
"kitchenbench/place_in_rack" = "kitchenbench.tasks:place_in_rack"
"kitchenbench/pour_pasta" = "kitchenbench.tasks:pour_pasta"
"kitchenbench/open_container" = "kitchenbench.tasks:open_container"
"kitchenbench/fold_cloth" = "kitchenbench.tasks:fold_cloth"
"kitchenbench/seal_container" = "kitchenbench.tasks:seal_container"
"kitchenbench/handoff" = "kitchenbench.tasks:handoff"
"kitchenbench/sort_cutlery" = "kitchenbench.tasks:sort_cutlery"
"kitchenbench/scoop_pasta" = "kitchenbench.tasks:scoop_pasta"

[project.entry-points."inspect_robots.embodiments"]
kitchen = "kitchenbench.embodiment:KitchenEmbodiment"

[project.entry-points."inspect_robots.policies"]
kitchen_scripted = "kitchenbench.policies:ScriptedKitchenPolicy"
kitchen_random = "kitchenbench.policies:RandomKitchenPolicy"
kitchen_noop = "kitchenbench.policies:NoopKitchenPolicy"

[tool.hatch.build.targets.wheel]
packages = ["src/kitchenbench"]


# ---------------------------------------------------------------------------
# Versioning: single-source the version from git tags via hatch-vcs (the
# release workflow cuts a vX.Y.Z tag; nothing is committed to main).
# ---------------------------------------------------------------------------
[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
# Before/without tags (e.g. shallow CI checkouts), fall back instead of failing.
version_scheme = "guess-next-dev"
fallback_version = "0.0.0"

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["kitchenbench"]

[tool.mypy]
# numpy >= 2.5 ships stubs that use PEP 695 `type` statements, which mypy only
# accepts when targeting >= 3.12 — so type-check against 3.12 while runtime
# support stays >= 3.10 (ruff's target-version enforces the 3.10 syntax floor).
python_version = "3.12"
strict = true
files = ["src/kitchenbench"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.coverage.run]
branch = true
source = ["kitchenbench"]

[tool.coverage.report]
fail_under = 100
show_missing = true
exclude_also = [
    "if TYPE_CHECKING:",
    "@(abc\\.)?abstractmethod",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "^\\s*\\.\\.\\.$",
    ": \\.\\.\\.$",
    "pragma: no cover",
]

# PyPI readme: identical to README.md except GitHub-only alert syntax
# (e.g. `> [!NOTE]`) is rewritten to bold blockquotes, which PyPI renders.
[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "README.md"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
pattern = '(?m)^> \[!NOTE\][ \t]*$'
replacement = '> **Note:**'

[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
pattern = '(?m)^> \[!TIP\][ \t]*$'
replacement = '> **Tip:**'

[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
pattern = '(?m)^> \[!IMPORTANT\][ \t]*$'
replacement = '> **Important:**'

[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
pattern = '(?m)^> \[!WARNING\][ \t]*$'
replacement = '> **Warning:**'

[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
pattern = '(?m)^> \[!CAUTION\][ \t]*$'
replacement = '> **Caution:**'
